adjust flow in Oauth business, add check database connection when application start from the first time, add integration testing, update apispec, add validation to checking refresh_token and access_token when check access token and when check refresh token, add path / to jid cookie
