# controller/oauth2_controller_impl.go
@@ -1,13 +1,11 @@
 package controller
 
 import (
-	"bytes"
-	"encoding/json"
 	"errors"
 	"fmt"
-	"github.com/gorilla/mux"
 	"html/template"
 	"net/http"
+	"net/url"
 	"simple-oauth-service/constanta"
 	errors2 "simple-oauth-service/errors"
 	"simple-oauth-service/helper"
@@ -27,71 +25,72 @@ func NewOauth2Controller(oauth2Service service.OAuth2Service) OAuth2Controller {
 }
 
 func (controller *OAuth2ControllerImpl) Authorize(w http.ResponseWriter, r *http.Request) {
-	var authorizeRequest request.AuthorizeRequest
-	helper.ReadFromRequestBody(r, &authorizeRequest)
+
+	u, err := url.Parse(r.URL.String())
+	helper.PanicIfError(err)
+
+	clientId, err := strconv.ParseInt(u.Query()["client_id"][0], 10, 64)
+	helper.PanicIfError(err)
+	redirectUrl := u.Query()["redirect_url"][0]
+	state := u.Query()["state"][0]
+
+	authorizeRequest := request.AuthorizeRequest{
+		ClientId:    clientId,
+		RedirectUrl: redirectUrl,
+	}
 
 	controller.Oauth2Service.Authorize(r.Context(), authorizeRequest)
 
-	redirectUrl := fmt.Sprintf("/login/%v/%v", authorizeRequest.ClientId, authorizeRequest.RedirectUrl)
-
-	req, err := http.NewRequest(http.MethodGet, redirectUrl, nil)
-	helper.PanicIfError(err)
-	req.Header.Set("Content-Type", "application/json")
-
-	http.Redirect(w, req, redirectUrl, http.StatusPermanentRedirect)
+	loginUrl := fmt.Sprintf("/oauth/login?client_id=%d&redirect_url=%s&state=%s", clientId, redirectUrl, state)
+	http.Redirect(w, r, loginUrl, http.StatusPermanentRedirect)
 }
 
 func (controller *OAuth2ControllerImpl) Login(w http.ResponseWriter, r *http.Request) {
-	vars := mux.Vars(r)
-
-	clientId, err := strconv.ParseInt(vars["clientId"], 10, 64)
-	helper.PanicIfError(err)
-	redirectUrl := vars["redirectUrl"]
 
 	_, isValidToken := helper.ValidateRefreshToken(r)
 
-	if r.Method != http.MethodPost && !isValidToken {
+	u, err := url.Parse(r.URL.String())
+	helper.PanicIfError(err)
+
+	clientId, err := strconv.ParseInt(u.Query()["client_id"][0], 10, 64)
+	helper.PanicIfError(err)
+	redirectUrl := u.Query()["redirect_url"][0]
+	state := u.Query()["state"][0]
+
+	email := r.FormValue("email")
+	password := r.FormValue("password")
+
+	if email == "" && password == "" && !isValidToken {
 		t, err2 := template.ParseFS(templates.Templates, "*.gohtml")
 		helper.PanicIfError(err2)
 
-		err2 = t.ExecuteTemplate(w, "login.gohtml", fmt.Sprintf("/oauth/login/%d/%s", clientId, redirectUrl))
+		loginUrl := fmt.Sprintf("/oauth/login?client_id=%d&redirect_url=%s&state=%s", clientId, redirectUrl, state)
+
+		err2 = t.ExecuteTemplate(w, "login.gohtml", loginUrl)
 		helper.PanicIfError(err2)
 		return
 	} else if isValidToken {
-		req, err3 := http.NewRequest(http.MethodPost, "/oauth/refresh_token", nil)
-		helper.PanicIfError(err3)
-		fmt.Println(req.URL.String())
-		http.Redirect(w, r, req.URL.String(), http.StatusPermanentRedirect)
+		http.Redirect(w, r, "/oauth/refresh_token", http.StatusPermanentRedirect)
 		return
 	}
 
 	credential := request.LoginRequest{
-		Email:    r.FormValue("email"),
-		Password: r.FormValue("password"),
+		Email:    email,
+		Password: password,
 	}
 
 	codeResponse := controller.Oauth2Service.Login(r.Context(), credential)
 
-	webResponse := response.WebResponse{
-		Code:   http.StatusPermanentRedirect,
-		Status: constanta.Status308,
-		Data:   codeResponse,
-	}
+	callbackUrl := fmt.Sprintf("%s?code=%s&state=%s", redirectUrl, codeResponse.AuthorizationCode, state)
 
-	body, err := json.Marshal(webResponse)
-	helper.PanicIfError(err)
-
-	req, err := http.NewRequest(http.MethodPost, redirectUrl, bytes.NewBuffer(body))
-	req.Header.Set("Content-Type", "application/json")
-
-	http.Redirect(w, req, redirectUrl, http.StatusPermanentRedirect)
+	http.Redirect(w, r, callbackUrl, http.StatusPermanentRedirect)
 }
 
 func (controller *OAuth2ControllerImpl) AccessToken(w http.ResponseWriter, r *http.Request) {
 	var accessTokenRequest request.AccessTokenRequest
 	helper.ReadFromRequestBody(r, &accessTokenRequest)
 
-	accessTokenResponse, c := controller.Oauth2Service.AccessToken(r.Context(), accessTokenRequest)
+	accessTokenResponse := controller.Oauth2Service.AccessToken(r.Context(), accessTokenRequest)
 
 	webResponse := response.WebResponse{
 		Code:   http.StatusOK,
@@ -99,7 +98,7 @@ func (controller *OAuth2ControllerImpl) AccessToken(w http.ResponseWriter, r *ht
 		Data:   accessTokenResponse,
 	}
 
-	helper.WriteToResponseBodyWithCookie(w, c, webResponse)
+	helper.WriteToResponseBody(w, webResponse)
 }
 
 func (controller *OAuth2ControllerImpl) RefreshToken(w http.ResponseWriter, r *http.Request) {
@@ -148,10 +147,7 @@ func (controller *OAuth2ControllerImpl) InternalLogin(w http.ResponseWriter, r *
 		helper.PanicIfError(err2)
 		return
 	} else if isValidToken {
-		req, err := http.NewRequest(http.MethodPost, "/oauth/refresh_token", nil)
-		helper.PanicIfError(err)
-		fmt.Println(req.URL.String())
-		http.Redirect(w, r, req.URL.String(), http.StatusPermanentRedirect)
+		http.Redirect(w, r, "/oauth/refresh_token", http.StatusPermanentRedirect)
 		return
 	}
 
