# model/request/access_token_request.go
@@ -1,7 +1,7 @@
 package request
 
 type AccessTokenRequest struct {
-	AuthorizationCode string `validate:"required" json:"authorization_code"`
-	ClientId          int64  `validate:"required" json:"client_id"`
-	ClientSecret      string `validate:"required" json:"client_secret"`
+	Code         string `validate:"required" json:"code"`
+	ClientId     int64  `validate:"required" json:"client_id"`
+	ClientSecret string `validate:"required" json:"client_secret"`
 }
