# model/response/access_token_response.go
@@ -1,5 +1,6 @@
 package response
 
 type AccessTokenResponse struct {
-	AccessToken string `json:"access_token"`
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
 }
